[package]
name = "coinsMarketBot"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11.14", features = [
    "default",
    "cookies",
    "json",
    "socks",
] }
serde = { version = "1.0.215", features = ["derive"] }
futures = "0.3" # for our async / await blocks
tokio = { version = "1.12", features = ["full"] } # Required for async examples
